Fix button spacing

--- a/app/styles/components/_projects.scss
+++ b/app/styles/components/_projects.scss
@@ -65,7 +65,6 @@
   }
 
   .btn {
-    margin-bottom: 0;
-    margin-left: 12px;
+    margin: 0 0 0 12px;
   }
 }
